getting rid of pywal

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -4,7 +4,7 @@
 }
 
 window#waybar {
-    font-family: SF Pro Display;
+    font-family: Roboto;
     font-weight: 500;
     font-size: 14px;
     background: rgba(11, 12, 13, 0.90);
