--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -4,7 +4,7 @@
 }
 
 window#waybar {
-    font-family: Roboto;
+    font-family: DejaVu;
     font-weight: 500;
     font-size: 14px;
     background: rgba(11, 12, 13, 0.90);
@@ -33,13 +33,14 @@ window#waybar {
 }
 
 #clock, #battery, #cpu, #memory, #network, #pulseaudio, #custom-spotify, #tray, #mode {
+    font-family: FontAwesome;
     font-size: 17px;
     margin: 0px 10px 0px 5px;
 }
 
 #pulseaudio {
     /* border-top: 1px solid transparent; */
-    margin-left: 15px;
+    /* margin-left: 10px; */
 }
 
 #battery.critical {
