--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -6,12 +6,11 @@
 window#waybar {
     font-family: SF Pro Display;
     font-weight: 300;
-    font-size: 18px;
-    background: rgba(11, 12, 13, 0.90);
-    border-bottom: 1px solid  rgba(0, 0, 2, 0.53);
-    color: #cfd6e6;
+    font-size: 15px;
+    background: @theme_base_color;
+    border-bottom: 1px solid @unfocused_borders;
+    color: @theme_text_color;
 }
-
 
 #workspaces button {
     font-size: 18px;
@@ -32,38 +31,42 @@ window#waybar {
     /* margin: 2px 0px 2px 0px; */
 }
 
-#clock, #battery, #cpu, #memory, #network, #pulseaudio, #custom-spotify, #tray, #mode {
+#clock, #battery, #cpu, #memory, #network, #pulseaudio, #custom-spotify, #tray, #mode, #custom-notification, #custom-gpu, #temperature {
     font-size: 18px;
     margin: 0px 10px 0px 5px;
 }
 
 #pulseaudio {
     /* border-top: 1px solid transparent; */
-    margin-left: 15px;
+    /*margin-left: 15px; */
 }
 
 #battery.critical {
      color: #e06c75;
 }
+
 #battery.charging {
     color: #5288e2;
 }
+
 #battery.full {
     margin: 0px 0px 0px 0px;
 }
 
-
 #network {
     border-top: 1px solid transparent;
 }
+
 #network.disconnected {
     margin: 0px 0px 0px 0px;
     color: rgba(75, 81, 98, 0);
 }
-
 
 #pulseaudio.muted {
     margin: 0px 0px 0px 0px;
     color: rgba(75, 81, 98, 0);
 }
 
+#custom-notification {
+    font-family: "NotoSansMono Nerd Font";
+}
