--- a/config/wofi/style.css
+++ b/config/wofi/style.css
@@ -1,26 +1,26 @@
 window {
 margin: 0px;
-border: 1px solid #e95678;
-background-color: #1c1e26;
+border: 1px solid #ff79c6;
+background-color: #282a36;
 }
 
 #input {
 margin: 5px;
 border: none;
 color: #e0e0e0;
-background-color: #16161c;
+background-color: #1c1e26;
 }
 
 #inner-box {
 margin: 5px;
 border: none;
-background-color: #1c1e26;
+background-color: #282a36;
 }
 
 #outer-box {
 margin: 5px;
 border: none;
-background-color: #1c1e26;
+background-color: #282a36;
 }
 
 #scroll {
@@ -35,7 +35,9 @@ color: #e0e0e0;
 } 
 
 #entry:selected {
-background-color: #16161c;
+background-color: #1c1e26;
 }
+
+
 
 
