--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,72 +1,110 @@
 * {
-    min-height: 0;
     border: none;
+    font-family: Font Awesome, Roboto, Arial, sans-serif;
+    font-size: 14px;
+    color: #ffffff;
+    border-radius: 8px;
 }
 
+
+window {
+	/*font-weight: bold;*/
+}
 window#waybar {
-    font-family: SF Pro Display;
-    font-weight: 300;
-    font-size: 15px;
-    background: @theme_base_color;
-    border-bottom: 1px solid @unfocused_borders;
-    color: @theme_text_color;
+    background: rgba(0, 0, 0, 0);
 }
-
+/*-----module groups----*/
+.modules-right {
+	background-color: rgba(0,43,51,0.85);
+    margin: 2px 10px 0 0;
+}
+.modules-center {
+	background-color: rgba(0,43,51,0.85);
+    margin: 2px 0 0 0;
+    padding: 0 8px 0 8px;
+}
+.modules-left {
+    margin: 2px 0 0 5px;
+	background-color: rgba(0,119,179,0.6);
+}
+/*-----modules indv----*/
+#workspaces {
+    padding: 1px 5px;
+    /* background-color: transparent; */
+    background-color: rgba(0,43,51,0.85);
+    border-radius: 8px;
+}
 #workspaces button {
-    font-size: 18px;
-    box-shadow: none;
-    text-shadow: none;
-    padding: 0px 3px 0px 3px;
-    color: rgba(95, 111, 128, 0.73);
+    padding: 1px 5px;
+    background-color: transparent;
+    /* background-color: rgba(0,43,51,0.85); */
 }
-
-
-#workspaces button.focused {
-    color: #cfd6e6;
-    /* margin: 2px 0px 2px 0px; */
-}
-
 #workspaces button:hover {
-    background: rgba(255, 255, 255, 0.00);
-    /* margin: 2px 0px 2px 0px; */
+    box-shadow: inherit;
+    /* background-color: transparent; */
+    background-color: rgba(0,153,153,1);
+    border-radius: 0px;
+}
+#workspaces button.focused {
+    background-color: transparent;
+    /* background-color: rgba(0,43,51,0.85); */
+}
+#workspaces button.active{
+    /* background-color: transparent; */
+    background-color: rgba(0,43,51,1);
+    border-radius: 0px;
 }
 
-#clock, #battery, #cpu, #memory, #network, #pulseaudio, #custom-spotify, #tray, #mode, #custom-notification, #custom-gpu, #temperature {
-    font-size: 18px;
-    margin: 0px 10px 0px 5px;
-}
 
-#pulseaudio {
-    /* border-top: 1px solid transparent; */
-    /*margin-left: 15px; */
+#clock,
+#battery,
+#cpu,
+#memory,
+#temperature,
+#network,
+#pulseaudio,
+#custom-media,
+#tray,
+#mode,
+#custom-power,
+#custom-menu,
+#idle_inhibitor {
+    padding: 0 10px;
 }
-
-#battery.critical {
-     color: #e06c75;
+#mode {
+    color: #cc3436;
+    font-weight: bold;
 }
-
-#battery.charging {
-    color: #5288e2;
+#custom-power {
+    background-color: rgba(0,119,179,0.6);
+    border-radius: 50px;
+    margin: 5px 5px;
+    padding: 1px 3px;
 }
-
-#battery.full {
-    margin: 0px 0px 0px 0px;
+/*-----Indicators----*/
+#idle_inhibitor.activated {
+    color: #2dcc36;
 }
-
-#network {
-    border-top: 1px solid transparent;
-}
-
-#network.disconnected {
-    margin: 0px 0px 0px 0px;
-    color: rgba(75, 81, 98, 0);
-}
-
 #pulseaudio.muted {
-    margin: 0px 0px 0px 0px;
-    color: rgba(75, 81, 98, 0);
+    color: #cc3436;
 }
+#battery.charging {
+    color: #2dcc36;
+}
+#battery.warning:not(.charging) {
+	color: #e6e600;
+}
+#battery.critical:not(.charging) {
+    color: #cc3436;
+}
+#temperature.critical {
+    color: #cc3436;
+}
+/*-----Colors----*/
+/*
+ *rgba(0,85,102,1),#005566 --> Indigo(dye)
+ *rgba(0,43,51,1),#002B33 --> Dark Green 
+ *rgba(0,153,153,1),#009999 --> Persian Green 
+ *
+ */
 
-#custom-notification {
-    font-family: "NotoSansMono Nerd Font";
-}
